# LMDB-wrapper-MISRA-C

./: .cursorrules  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  llms-full.txt  llms.txt
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
cmake/: FetchCMocka.cmake  FetchLMDB.cmake  lmdb_wrapper-config.cmake.in
docs/: architecture.md  context.md
examples/: basic_usage.c
include/: lmdb_wrapper.h
src/: lmdb_wrapper.c
tests/: test_lmdb_wrapper.c
todo/: plan.md
vcpkg-port/: README.md  portfile.cmake  vcpkg.json
